# bugger-news

./: .env.examples  .gitignore  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
app/: application.py  config.py  main.py  worker.py
app/config/: arq.py  db.py
app/models/: __init__.py  articles.py
app/routes/: __init__.py  articles.py
app/tasks/: scrap.py
app/utils/: arq.py  pydantic.py
